see source code and the LICENSE file

2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 3, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note3

07-Apr-2013 Michael Babker
 ^ [#30502] Replace use of JRequest in com_media
 # [#30489] *Regression: Menu Type UTF8 Alias prevents display in Menu Items Manager in J3
 ^ [#30499] Duplicate "btn" class in login module button.  Thanks Thomas Hunziker
 # [#30041] Use of '/' not being handled well on Windows Servers.  Thanks Parth Lawate
 # [#30054] Catchable fatal error: Object of class stdClass could not be converted to string in /plugins/system/debug/debug.php on line 303.  Thanks Ryan K.

07-Apr-2013 Jean-Marie Simonet
 # [#30226] *TAGS: Getting rid of all aspects concerning lang associations

06-Apr-2013 Mark Dexter
 # [#30453] Tags: Pagination not working when linking to a tag.
 # [#30486] *Banners Manager:Banners and Banners Manager:Clients Status filter issue. Thanks Jean-Marie Simonet.
 # [#30480] com_contact error in admin->view->contacts search "author:xxxx". Thanks Brent Cordis.
 # [#30481] Missing space between icon-cog and caret in featured view. Thanks Thomas Hunziker.
 # [#30250] Upgrade jQuery from 1.8.1 to 1.8.3. Thanks George Wilson.
 # [#30046] Update SQLSRV with platform fixes. Thanks David Hurley.

05-Apr-2013 Jean-Marie Simonet
 # [#30416] duplicate alias in banner manager on pressing save as copy

04-Apr-2013 Mark Dexter
 # Reverting [#30430] Severe bug with "com_content" component routing.

04-Apr-2013 Jean-Marie Simonet
 # [#30454] Tags: Adding Tags via Batch function replaces all previous tags. Thanks David and Elin.
 # [#30463] Missing closing div in compact tag layout. Thanks Thomas Hunziker and Constantin Romankiewicz