@@ -159,6 +159,7 @@ Norwegian Bokmål (nb-NO) - Joomla! i Norge - Rune Rasmussen, Roar Jystad, Jens-
 Norwegian Nynorsk (nn-NO) - Joomla! i Norge - Toyni Tobekk (based on nb-NO translations)
 Persian (fa-IR) - Persian Translation Team - Mohsen Firoozmandan, Joomla Farsi Team
 Polish (pl-PL) - Polskie Centrum Joomla! 
+Portuguese (pt-BR) - Joomla! Brasil
 Portuguese (pt-PT) - Comunidade Joomla! Portugal - Paulo Izidoro
 Romanian (ro-RO) - Romanian Joomla! Community - Cosmin Lebu
 Russian (ru-RU) - Russian Translation Team (joomlaportal.ru) - Sergey Litvinov, Sergey Brovin, Alexey Brin
