@@ -1,0 +1,303 @@
+; Joomla! Project
+; Copyright (C) 2005 - 2013 Open Source Matters. All rights reserved.
+; License GNU General Public License version 2 or later; see LICENSE.txt
+; Note : All ini files need to be saved as UTF-8
+
+
+
+;Stepbar
+INSTL_STEP_COMPLETE_LABEL="Concluir"
+INSTL_STEP_DATABASE_LABEL="Base de dados"
+INSTL_STEP_DEFAULTLANGUAGE_LABEL="Escolher idioma padrão"
+INSTL_STEP_FTP_LABEL="FTP"
+INSTL_STEP_LANGUAGE_LABEL="Idioma"
+INSTL_STEP_LANGUAGES_LABEL="Instalar idiomas"
+INSTL_STEP_LICENSE_LABEL="Licença"
+INSTL_STEP_PREINSTALL_LABEL="Pré-verificação"
+INSTL_STEP_SITE_LABEL="Configuração"
+INSTL_STEP_SUMMARY_LABEL="Resumo"
+INSTL_STEPS_TITLE="Etapas"
+
+;Language view
+INSTL_LANGUAGE_TITLE="Escolher idioma"
+INSTL_SELECT_LANGUAGE_DESC="Por favor escolha o idioma a utilizar durante a instalação do Joomla!"
+INSTL_SELECT_LANGUAGE_TITLE="Escolher idioma"
+INSTL_WARNJAVASCRIPT="Atenção! É necessário ativar o JavaScript para a correta instalação do Joomla!"
+INSTL_WARNJSON="É necessario ativar o JSON na sua instalação PHP de forma a poder instalar o Joomla. Contacte o gestor do seu alojamento!"
+
+;Preinstall view
+INSTL_PRECHECK_TITLE="Verificação prévia de instalação"
+INSTL_PRECHECK_FOR_VERSION="Verificação prévia de instalação para %s:"
+INSTL_PRECHECK_DESC="Se algum destes itens não for suportado (marcados como <strong class="_QQ_"red"_QQ_">Não</strong>) então tente corrigi-los.<br />Provavelmente não será possível instalar o Joomla sem cumprir estes requisitos ou terá erros graves em funcionamento."
+INSTL_PRECHECK_RECOMMENDED_SETTINGS_TITLE="Definições recomendadas:"
+INSTL_PRECHECK_RECOMMENDED_SETTINGS_DESC="Estas configurações são recomendadas para o PHP de modo a assegurar a completa compatibilidade com o Joomla.<br />No entanto, o Joomla poderá funcionar minimamente mesmo que as suas configurações não estejam de acordo com as recomendadas."
+INSTL_PRECHECK_DIRECTIVE="DIRETIVA"
+INSTL_PRECHECK_RECOMMENDED="RECOMENDADO"
+INSTL_PRECHECK_ACTUAL="REAL"
+
+; Database view
+INSTL_DATABASE="Configuração da base de dados"
+INSTL_DATABASE_HOST_DESC="Normalmente é "_QQ_"localhost"_QQ_" ou o nome de servidor fornecido pelo seu alojamento"
+INSTL_DATABASE_HOST_LABEL="Nome do servidor"
+INSTL_DATABASE_NAME_DESC="Alguns alojamentos permitem apenas um determinado nome DB por site. Use um prefixo de tabela para diferenciar os sítios que utilizem a mesma base de dados."
+INSTL_DATABASE_NAME_LABEL="Nome da base de dados"
+INSTL_DATABASE_NO_SCHEMA="Não existe um esquema de base de dados para este tipo de base."
+INSTL_DATABASE_OLD_PROCESS_DESC="Todas as tabelas desta base de dados criadas em anteriores instalações do Joomla serão eliminadas."
+INSTL_DATABASE_OLD_PROCESS_LABEL="Tabelas antigas"
+INSTL_DATABASE_PASSWORD_DESC="Para segurança do sítio é obrigatório o uso de senha na conta da base de dados"
+INSTL_DATABASE_PASSWORD_LABEL="Senha"
+INSTL_DATABASE_PREFIX_DESC="Indique um prefixo para a base de dados ou use o gerado automaticamente. Recomendamos três ou quatro caracteres contendo apenas caracteres do tipo alfanumérico e terá de ser terminado por um sob-traço. Importante: o prefixo escolhido não pode ser utilizado noutras tabelas."
+INSTL_DATABASE_PREFIX_LABEL="Prefixo da tabela"
+INSTL_DATABASE_PREFIX_MSG="O prefixo de tabela deve ser iniciado por uma letra, seguido de caracteres do tipo alfanumérico e terá de ser terminado por um sob-traço"
+INSTL_DATABASE_TYPE_DESC="Provavelmente será MySQLi"
+INSTL_DATABASE_TYPE_LABEL="Tipo de base de dados"
+INSTL_DATABASE_USER_DESC="Algo como "_QQ_"root"_QQ_" ou um nome de utilizador atribuído pelo seu alojamento"
+INSTL_DATABASE_USER_LABEL="Nome de utilizador"
+INSTL_DATABASE_TITLE="Configurações da ligação"
+INSTL_DATABASE_DESC="<p>Um sítio Joomla! armazena todos os seus dados numa base de dados. Aqui está a informação necessária para criar essa base de dados.</p><p> Se está a instalar o Joomla! num servidor web remoto, necessita desta informação do seu fornecedor de alojamento.</p><p>Alguns alojamentos requerem a criação da base de dados antes da instalação do Joomla. Se lhe foi devolvida a mensagem "_QQ_"Não foi possível ligar à base de dados"_QQ_", verifique se o seu nome de utilizador e senha DE ACESSO À BASE DE DADOS estão corretos. Se continuar a receber esta mensagem, confirme com o seu fornecedor de alojamento, para verificar se terá de criar a base de dados antes de instalar o Joomla.</p>"
+
+;FTP view
+INSTL_AUTOFIND_FTP_PATH="FTP - Caminho automático"
+INSTL_FTP="Configuração FTP"
+INSTL_FTP_DESC="<p>Em alguns servidores será necessário fornecer as credenciais FTP para que a instalação seja concluída. Se tiver dificuldades em completar a instalação sem essas credenciais, confirme com o seu fornecedor de alojamento se isso é necessário. </p><p>Por razões de segurança é melhor criar uma conta FTP independente, com acesso apenas à instalação Joomla! e não a todo o servidor web. O seu fornecedor de alojamento pode ajuda-lo nesta tarefa.</p><p><b>Nota:</b> Se estiver a instalar num servidor Windows, a camada FTP <strong>não</strong> é necessária.</p>"
+INSTL_FTP_ENABLE_LABEL="Ativar camada FTP"
+INSTL_FTP_HOST_LABEL="Servidor FTP"
+INSTL_FTP_PASSWORD_LABEL="Senha de FTP"
+INSTL_FTP_PORT_LABEL="Porta FTP"
+INSTL_FTP_ROOT_LABEL="Caminho da raiz FTP"
+INSTL_FTP_SAVE_LABEL="Guardar senha FTP"
+INSTL_FTP_TITLE="Configuração FTP (<strong class="_QQ_"red"_QQ_">Opcional - A maioria dos utilizadores pode ignorar este passo - Carregue em seguinte para ignorar e avançar</strong>)"
+INSTL_FTP_USER_LABEL="Nome de utilizador FTP"
+INSTL_SITE_NAME_LABEL="Nome do sítio"
+INSTL_VERIFY_FTP_SETTINGS="Verificar configurações FTP"
+INSTL_FTP_SETTINGS_CORRECT="Configurações corretas"
+INSTL_FTP_USER_DESC="Atenção! É recomendado deixar este campo em branco e digitar o seu nome de uutilizador FTP de cada vez que pretender transferir ficheiros."
+INSTL_FTP_PASSWORD_DESC="Atenção! É recomendado deixar este campo em branco e digitar a sua senha de FTP de cada vez que pretender transferir ficheiros."
+
+;Site View
+INSTL_SITE="Configuração principal"
+INSTL_ADMIN_EMAIL_LABEL="Email administrador"
+INSTL_ADMIN_EMAIL_DESC="Indique um endereço de email. Este será o endereço de email do Super Administrador do sítio web."
+INSTL_ADMIN_PASSWORD_LABEL="Senha de admin"
+INSTL_ADMIN_PASSWORD_DESC="Definir a senha da sua conta de Super Administrador e confirmar no campo seguinte."
+INSTL_ADMIN_PASSWORD2_LABEL="Confirmar senha de admin"
+INSTL_ADMIN_USER_LABEL="Nome de utilizador Admin"
+INSTL_ADMIN_USER_DESC="Pode alterar o nome de utilizador padrão <strong>admin</strong>."
+INSTL_SITE_NAME_TITLE="Nome do sítio"
+INSTL_SITE_NAME_DESC="Digite o nome do seu sítio Joomla."
+INSTL_SITE_METADESC_LABEL="Descrição"
+INSTL_SITE_METADESC_TITLE_LABEL="Indique uma descrição geral do seu sítio para ser utilizada pelos motores de pesquisa. É recomendado uma frase significativa e com menos de 20 palavras."
+INSTL_SITE_OFFLINE_LABEL="Sítio Desligado"
+INSTL_SITE_OFFLINE_TITLE_LABEL="Coloca o sítio em modo desligado para o público e após terminar a instalação. O sítio pode depois ser colocado em modo ligado através das configurações globais. O administrador pode ver a entrada e administrar o sítio sem problemas."
+INSTL_SITE_INSTALL_SAMPLE_LABEL="INSTALAR DADOS PADRÃO"
+INSTL_SITE_INSTALL_SAMPLE_DESC="É altamente recomendado instalar dados de exemplo. Será instalado o conteúdo de exemplo padrão que é incluído no pacote da instalação Joomla. Deve escolher dados em Português para que o sítio fique totalmente em português. Posteriormente pode eliminar as partes não desejadas e alterar os restantes valores"
+INSTL_SITE_INSTALL_SAMPLE_NONE="Nenhum"
+INSTL_SAMPLE_BLOG_SET="Blogue - Dados em Inglês"
+INSTL_SAMPLE_BROCHURE_SET="Brochura - Dados em Inglês"
+INSTL_SAMPLE_DATA_SET="Geral - Dados em Inglês"
+INSTL_SAMPLE_LEARN_SET="Treino Joomla - Dados em Inglês"
+INSTL_SAMPLE_TESTING_SET="Testes - Dados em Inglês"
+
+;Summary view
+INSTL_FINALISATION="Concluir"
+INSTL_SUMMARY_INSTALL="Instalar"
+INSTL_SUMMARY_EMAIL_LABEL="Configuração por email"
+INSTL_SUMMARY_EMAIL_DESC="Após a instalação enviar email com os dados da configuração para %s."
+INSTL_SUMMARY_EMAIL_PASSWORDS_LABEL="Incluir senhas no email"
+INSTL_SUMMARY_EMAIL_PASSWORDS_DESC="ALERTA É recomendado não enviar ou guardar as suas senhas num email."
+
+;Installing view
+INSTL_INSTALLING="instalando..."
+INSTL_INSTALLING_DATABASE_BACKUP="Em cópia de segurança de tabelas antigas"
+INSTL_INSTALLING_DATABASE_REMOVE="A remover tabelas antigas"
+INSTL_INSTALLING_DATABASE="A criar tabelas na base de dados"
+INSTL_INSTALLING_SAMPLE="A instalar dados de exemplo"
+INSTL_INSTALLING_CONFIG="A criar ficheiro de configuração"
+INSTL_INSTALLING_EMAIL="A enviar email para %s"
+
+;Email
+INSTL_EMAIL_SUBJECT="Detalhes da configuração: %s"
+INSTL_EMAIL_HEADING="Abaixo são apresentadas as definições da configuração do novo sítio web em Joomla!:"
+INSTL_EMAIL_NOT_SENT="Não foi possível enviar o email."
+
+;Complete view
+INSTL_COMPLETE="Concluir"
+INSTL_COMPLETE_ADMINISTRATION_LOGIN_DETAILS="Dados para autenticação na administração"
+INSTL_COMPLETE_DESC1="Clique no botão SÍTIO para ver o seu sítio público ou no botão ADMIN para entrar na administração do seu site Joomla!"
+INSTL_COMPLETE_DESC2="No sítio da Comunidade Portuguesa de Joomla! encontrará ajuda no fórum, extras para o site e documentos sobre Joomla."
+INSTL_COMPLETE_DESC3="Clique no botão à direita para abrir o site da comunidade numa nova janela!"
+INSTL_COMPLETE_ERROR_FOLDER_ALREADY_REMOVED="A pasta de instalação já tinha sido removida"
+INSTL_COMPLETE_ERROR_FOLDER_DELETE="Não foi possível remover a pasta de instalação. Por favor elimine manualmente a pasta INSTALLATION"
+INSTL_COMPLETE_FOLDER_REMOVED="Pasta de instalação removida com sucesso"
+INSTL_COMPLETE_LANGUAGE_1="Joomla no seu idioma?"
+INSTL_COMPLETE_LANGUAGE_DESC="Antes de remover a pasta de instalação pode instalar idiomas adicionais carregando no seguinte botão."
+INSTL_COMPLETE_LANGUAGE_DESC2="Nota: a instalação de idiomas requer acesso à internet.<br />Algumas configurações de servidores impedem essa instalação direta. Se for este o seu caso não se preocupe pois posteriormente pode fazer essa instalação no painel de administração do Joomla tal como para uma extensão. Download em www.joomlapt.com"
+INSTL_COMPLETE_REMOVE_FOLDER="Remover a pasta de instalação"
+INSTL_COMPLETE_REMOVE_INSTALLATION="Por favor não se esqueça de REMOVER POR COMPLETO A PASTA DE INSTALAÇÃO<br /> Não poderá continuar para além deste ponto enquanto o diretório INSTALLATION não for eliminado. Este é um procedimento de segurança do Joomla."
+INSTL_COMPLETE_TITLE="Parabéns, o Joomla foi instalado com sucesso."
+INSTL_COMPLETE_INSTALL_LANGUAGES="Adicional: Instalar idiomas"
+
+;Languages view
+INSTL_LANGUAGES="Instalar pacotes de idioma"
+INSTL_LANGUAGES_COLUMN_HEADER_LANGUAGE="Idioma"
+INSTL_LANGUAGES_COLUMN_HEADER_VERSION="Versão"
+INSTL_LANGUAGES_DESC="O interface do Joomla está disponível em vários idiomas. Escolha os seus idiomas preferidos assinalando as caixas de marcação. Instale os idiomas carregando no botão SEGUINTE.<br />Nota: esta operação levará alguns segundos por download e instalação de cada idioma. Não escolha mais que 3 idiomas de cada vez de modo a evitar ligações esgotadas ao seu servidor."
+INSTL_LANGUAGES_MESSAGE_PLEASE_WAIT="Esta operação levará 10 segundos por idioma<br />Por favor aguarde enquanto os ficheiros são descarregados e os idiomas instalados..."
+INSTL_LANGUAGES_NO_LANGUAGE_SELECTED="Por favor escolha um idioma. Se não precisa instalar outros idiomas carregue no botão ANTERIOR"
+INSTL_LANGUAGES_WARNING_NO_INTERNET="Não foi possível ligar ao servidor de idiomas. Por favor conclua o processo de instalação."
+INSTL_LANGUAGES_WARNING_NO_INTERNET2="Nota: posteriormente poderá instalar idiomas no painel de administração do Joomla!"
+INSTL_LANGUAGES_WARNING_BACK_BUTTON="Voltar ao último passo da instalação"
+
+;Defaultlanguage view
+INSTL_DEFAULTLANGUAGE_ADMINISTRATOR="Idioma padrão de administração"
+INSTL_DEFAULTLANGUAGE_ADMIN_COULDNT_SET_DEFAULT="Não foi possível definir este idioma como padrão. Será utilizado o idioma inglês para o interface de administração."
+INSTL_DEFAULTLANGUAGE_ADMIN_SET_DEFAULT="O idioma %s foi definido como padrão para a administração."
+INSTL_DEFAULTLANGUAGE_COLUMN_HEADER_SELECT="Escolher"
+INSTL_DEFAULTLANGUAGE_COLUMN_HEADER_LANGUAGE="Idioma"
+INSTL_DEFAULTLANGUAGE_COLUMN_HEADER_TAG="Código"
+INSTL_DEFAULTLANGUAGE_COULD_NOT_INSTALL_LANGUAGE="Não foi possível instalar o idioma %s."
+INSTL_DEFAULTLANGUAGE_DESC="Foram instalados os seguintes idiomas. Por favor escolha o idioma padrão para o painel de administração do sítio e carregue no botão seguinte."
+INSTL_DEFAULTLANGUAGE_DESC_FRONTEND="Foram instalados os seguintes idiomas. Por favor escolha o idioma padrão para o sítio público e carregue no botão seguinte."
+INSTL_DEFAULTLANGUAGE_FRONTEND="Idioma padrão do sítio"
+INSTL_DEFAULTLANGUAGE_FRONTEND_COULDNT_SET_DEFAULT="Não foi possível definir este idioma como padrão. Será utilizado o idioma inglês para o interface público do sítio."
+INSTL_DEFAULTLANGUAGE_FRONTEND_SET_DEFAULT="O idioma %s foi definido como padrão para o sítio."
+INSTL_DEFAULTLANGUAGE_NOTE="Nota: quando carregar no botão SEGUINTE será enviado para o fim do processo de instalação onde lhe será solicitado que elimine a pasta de instalação."
+INSTL_DEFAULTLANGUAGE_TABLE_HEADER="Escolha o seu idioma padrão"
+INSTL_DEFAULTLANGUAGE_TRY_LATER="Posteriormente poderá fazer a instalação no painel de administração do Joomla!"
+
+;Database Model
+INSTL_DATABASE_COULD_NOT_CONNECT="Não foi possível ligar à base de dados. A ligação devolveu o número: %s"
+INSTL_DATABASE_COULD_NOT_REFRESH_MANIFEST_CACHE="Não foi possível atualizar a cache do manifesto para a extensão: %s"
+INSTL_DATABASE_EMPTY_NAME=""
+INSTL_DATABASE_ERROR_BACKINGUP="Ocorreram alguns erros ao efetuar a cópia de segurança da base de dados."
+INSTL_DATABASE_ERROR_CREATE="Ocorreu um erro ao criar a base de dados %s.<br />O utilizador não terá privilégios no servidor que permitam criar a base de dados. A base de dados necessária terá de ser criada separadamente. Para criar utilize o painel de gestão do seu alojamento web. Só depois poderá instalar o Joomla!"
+INSTL_DATABASE_ERROR_DELETE="Ocorreram alguns erros ao eliminar a base de dados"
+INSTL_DATABASE_ERROR_INITIALISE_SCHEMA="Erro a inicializar o esquema de números de versão"
+INSTL_DATABASE_FIELD_VALUE_REMOVE="Remover"
+INSTL_DATABASE_FIELD_VALUE_BACKUP="Cópia de segurança"
+INSTL_DATABASE_FIX_TOO_LONG="O prefixo da tabela MySQL não pode ter mais do que 15 caracteres"
+INSTL_DATABASE_INVALID_DB_DETAILS="As informações fornecidas relativas à base de dados estão incorretos e ou vazios."
+INSTL_DATABASE_INVALID_MYSQL_VERSION="Precisa do MySQL 5.0.4 ou superior para continuar a instalação. A sua versão é: %s"
+INSTL_DATABASE_INVALID_MYSQLI_VERSION="Precisa do MySQL 5.0.4 ou superior para continuar a instalação. A sua versão é: %s"
+INSTL_DATABASE_INVALID_SQLSRV_VERSION="Precisa do SQL Server 2008 R2 (10.50.1600.1) ou superior para continuar a instalação. A sua versão é: %s"
+INSTL_DATABASE_INVALID_SQLZURE_VERSION="Precisa do SQL Server 2008 R2 (10.50.1600.1) ou superior para continuar a instalação. A sua versão é: %s"
+INSTL_DATABASE_INVALID_TYPE="Escolha o tipo de base de dados"
+INSTL_DATABASE_NAME_TOO_LONG="O nome da base de dados MySQL não pode ter mais do que 64 caracteres"
+INSTL_DATABASE_PREFIX_INVALID_CHARS="O prefixo da tabela MySQL deve começar por uma letra e ser seguido apenas por letras, números ou sob-traços"
+INSTL_DATABASE_INVALID_NAME="Versões do MySQL anteriores a 5.1.6 não podem conter pontos ou outros caracteres especiais no nome. A sua versão é: %s"
+INSTL_DATABASE_NAME_INVALID_SPACES="Nomes da base de dados MySQL ou nomes das tabelas dessa base não podem começar ou terminar com espaços"
+INSTL_DATABASE_NAME_INVALID_CHAR="MySQL não pode conter um identificador NUL ASCII(0x00)."
+INSTL_DATABASE_FILE_DOES_NOT_EXIST="Ficheiro %s não existe"
+
+;controllers
+INSTL_COOKIES_NOT_ENABLED="Os Cookies não estarão ativados no seu navegador. Não poderá instalar a aplicação com esta função desativada. Pode também existir um problema com o caminho de sessão no servidor. Se for este o caso terá de o resolver com o seu fornecedor de alojamento."
+INSTL_HEADER_ERROR="Erro"
+
+;Helpers
+INSTL_PAGE_TITLE="Instalador web para Joomla!"
+
+;Configuration model
+INSTL_ERROR_CONNECT_DB="Não foi possível ligar à base de dados. A ligação devolveu o número: %s"
+INSTL_STD_OFFLINE_MSG="Este sítio está em manutenção.<br /> Volte brevemente."
+
+;FTP model
+INSTL_FTP_INVALIDROOT="O diretório de FTP especificado não é o diretório desta instalação Joomla!"
+INSTL_FTP_NOCONNECT="Não foi possível ligar ao servidor de FTP"
+INSTL_FTP_NODELE="A função "_QQ_"DELE"_QQ_" falhou."
+INSTL_FTP_NODIRECTORYLISTING="Não foi possível obter uma listagem do diretório do servidor FTP"
+INSTL_FTP_NOLIST="A função "_QQ_"LIST"_QQ_" falhou."
+INSTL_FTP_NOLOGIN="Não foi possível autenticar no servidor de FTP."
+INSTL_FTP_NOMKD="A função "_QQ_"MKD"_QQ_" falhou."
+INSTL_FTP_NONLST="A função "_QQ_"NLST"_QQ_" falhou."
+INSTL_FTP_NOPWD="A função "_QQ_"PWD"_QQ_" falhou."
+INSTL_FTP_NORETR="A função "_QQ_"RETR"_QQ_" falhou."
+INSTL_FTP_NORMD="A função "_QQ_"RMD"_QQ_" falhou."
+INSTL_FTP_NOROOT="Não foi possível aceder ao diretório de FTP"
+INSTL_FTP_NOSTOR="A função "_QQ_"STOR"_QQ_" falhou."
+INSTL_FTP_NOSYST="A função "_QQ_"SYST"_QQ_" falhou."
+INSTL_FTP_UNABLE_DETECT_ROOT_FOLDER="Não foi possível identificar automaticamente o diretório de raiz do FTP"
+
+;others
+INSTL_ADVANCED_SETTINGS="Configurações avançadas"
+INSTL_BASIC_SETTINGS="Configurações básicas"
+INSTL_CONFPROBLEM="O seu ficheiro de configuração ou o diretório não são editáveis, ou existiu um problema ao criar o ficheiro de configuração. Terá de carregar o seguinte código manualmente num novo ficheiro. Clique na área de texto para realçar todo o código. Copie e cole para um novo ficheiro a que dará o nome configuration.php e envie por FTP para a raiz do seu sítio Joomla. O ficheiro deve ser criado com um editor próprio como o Notepad++ e não pelo bloco de notas"
+INSTL_DATABASE_SUPPORT="Suporte a Base de dados:"
+INSTL_DISPLAY_ERRORS="Exibir erros"
+INSTL_ERROR_DB="Ocorreram alguns erros no preenchimento de dados na base: %s"
+INSTL_ERROR_INITIALISE_SCHEMA="Não foi possível inicializar o esquema da base de dados"
+INSTL_FILE_UPLOADS="Carregamento de ficheiros"
+INSTL_GNU_GPL_LICENSE="Licença GNU/GPL"
+INSTL_INSTALLATION="Instalação"
+INSTL_JSON_SUPPORT_AVAILABLE="Suporte JSON"
+INSTL_LICENSE="Licença"
+INSTL_MAGIC_QUOTES_GPC="Citações Mágicas GPC desligadas"
+INSTL_MAGIC_QUOTES_RUNTIME="Execução de Citações mágicas"
+INSTL_MB_LANGUAGE_IS_DEFAULT="Idioma padrão de MB"
+INSTL_MB_STRING_OVERLOAD_OFF="Definição OVERLOAD de MB desligada"
+INSTL_NOTICEMBLANGNOTDEFAULT="A 'mbstring' do PHP não está definida como neutra para idioma. Pode efetuar essa definição localmente colocando <strong>php_value mbstring.language neutral</strong> no ficheiro <code>.htaccess</code>."
+INSTL_NOTICEMBSTRINGOVERLOAD="A 'mbstring' do PHP de função 'overload' está ligada. Pode ser desligada localmente inserindo <strong>php_value mbstring.func_overload 0</strong> no ficheiro <code>.htaccess</code>."
+INSTL_NOTICEYOUCANSTILLINSTALL="<br />Apesar do problema pode continuar a instalação, sendo as definições de configuração exibidas no final da instalação. Terá então de copiar esses dados, colar num ficheiro texto e enviar por FTP. Como? 1- Clique na área de texto para realçar todo o código e cole-o num novo ficheiro de texto. 2- Chame a este arquivo 'configuration.php' e envie-o para a pasta raiz do sítio. Nota: Não crie o ficheiro no bloco de notas ou no word mas em programas para edição de código como o Notepad2 ou no Notepad++"
+INSTL_OUTPUT_BUFFERING="Memória intermédia de saída"
+INSTL_PARSE_INI_FILE_AVAILABLE="Permite INI Parser"
+INSTL_PHP_VERSION="Versão de PHP"
+INSTL_REGISTER_GLOBALS="Registos globais desligados"
+INSTL_SAFE_MODE="Modo de segurança"
+INSTL_SESSION_AUTO_START="Início automático de sessão"
+INSTL_WRITABLE="%s Editável"
+INSTL_XML_SUPPORT="Permite XML"
+INSTL_ZIP_SUPPORT_AVAILABLE="Permite ZIP nativo"
+INSTL_ZLIB_COMPRESSION_SUPPORT="Permite compressão Zlib"
+INSTL_PROCESS_BUSY="Processo em execução. Por favor, aguarde..."
+
+;Global strings
+JADMINISTRATOR="Administração"
+JADVANCED="Avançado"
+JCHECK_AGAIN="Verificar novamente"
+JERROR="Erro"
+JEMAIL="Email"
+JGLOBAL_ISFREESOFTWARE="%s é um software aberto disponibilizado sob a %s."
+JGLOBAL_LANGUAGE_VERSION_NOT_PLATFORM="Pacote de idioma não coincide com a versão Joomla!. Algumas sequências de texto podem estar em falta."
+JGLOBAL_SELECT_AN_OPTION="Escolher uma opção"
+JGLOBAL_SELECT_NO_RESULTS_MATCH="Sem resultados"
+JGLOBAL_SELECT_SOME_OPTIONS="Escolher algumas opções"
+JINVALID_TOKEN="O pedido mais recente foi rejeitado porque continha um certificado de segurança inválido. Por favor, refresque com F5 a página e tente novamente."
+JNEXT="Seguinte"
+JNO="Não"
+JNOTICE="Aviso"
+JOFF="Desligado"
+JON="Ligado"
+JPREVIOUS="Anterior"
+JSITE="Sítio"
+JUSERNAME="Nome de utilizador"
+JYES="Sim"
+
+; Framework strings necessary when no lang pack is available
+JLIB_DATABASE_ERROR_CONNECT_MYSQL="Não foi possível ligar ao MySQL."
+JLIB_DATABASE_ERROR_DATABASE="Ocorreu um erro de base de dados."
+JLIB_DATABASE_ERROR_LOAD_DATABASE_DRIVER="Não foi possível carregar o driver da base de dados: %s"
+JLIB_ENVIRONMENT_SESSION_EXPIRED="A sua sessão expirou, por favor recarregue a página."
+JLIB_FILESYSTEM_ERROR_PATH_IS_NOT_A_FOLDER_FILES="JFolder: :files: Caminho não é um directório. Caminho: %s"
+JLIB_FORM_FIELD_INVALID="Campo inválido:&#160;"
+JLIB_FORM_VALIDATE_FIELD_INVALID="Campo inválido: %s"
+JLIB_FORM_VALIDATE_FIELD_REQUIRED="Campo obrigatório: %s"
+JLIB_UTIL_ERROR_CONNECT_DATABASE="JDatabase: :getInstance: Não foi possível ligar à base de dados <br />joomla.library: %1$s - %2$s"
+
+; Strings for the language debugger
+JDEBUG_LANGUAGE_FILES_IN_ERROR="Erros de execução nos ficheiros de idioma"
+JDEBUG_LANGUAGE_UNTRANSLATED_STRING="Linhas não traduzidas"
+JNONE="Nenhum"
+
+; Necessary for errors
+ADMIN_EMAIL="Email de Admin"
+ADMIN_PASSWORD="Senha de Admin"
+ADMIN_PASSWORD2="Confirmar senha de Admin"
+SITE_NAME="Nome do sítio"
+
+; Database types (allows for a more descriptive label than the internal name)
+MYSQL="MySQL"
+MYSQLI="MySQLi"
+ORACLE="Oracle"
+POSTGRESQL="PostgreSQL"
+SQLAZURE="Microsoft SQL Azure"
+SQLITE="SQLite"
+SQLSRV="Microsoft SQL Server"
