@@ -1,0 +1,21 @@
+<?xml version="1.0" encoding="utf-8"?>
+<metafile
+	version="3.1"
+	client="installation">
+	<name>Português (pt-PT)</name>
+	<version>3.1</version>
+	<creationDate>2013-04-06</creationDate>
+	<author>Comunidade JoomlaPT! Portugal</author>
+	<copyright>Copyright (C) 2005 - 2013 Open Source Matters. All rights reserved.</copyright>
+	<license>GNU General Public License version 2 or later; see LICENSE.txt</license>
+	<description>Idioma de instalação Joomla v3.x - português europeu pt-PT</description>
+	<files>
+		<filename>pt-PT.ini</filename>
+	</files>
+	<metadata>
+		<name>Português (pt-PT)</name>
+		<tag>pt-PT</tag>
+		<rtl>0</rtl>
+	</metadata>
+	<params />
+</metafile>
